[gd_scene load_steps=18 format=3 uid="uid://dyjx6j8a10maq"]

[ext_resource type="Script" path="res://menu/ram_menu.gd" id="1_fm8fe"]
[ext_resource type="StyleBox" uid="uid://dl3jhr4qsj1hk" path="res://menu/fonts/menu_style.tres" id="2_8qwkf"]
[ext_resource type="LabelSettings" uid="uid://cg7ecyiuomsvk" path="res://menu/Label_Settings1.tres" id="3_w6lip"]
[ext_resource type="PackedScene" uid="uid://chfusk0x06bqh" path="res://file_block.tscn" id="4_7io3y"]
[ext_resource type="FontFile" uid="uid://mijglbcw51mn" path="res://menu/fonts/century_gothic_bold.ttf" id="5_8qw4e"]
[ext_resource type="StyleBox" uid="uid://8nrv7qy50du1" path="res://menu/btn_dark.tres" id="6_f3gru"]
[ext_resource type="StyleBox" uid="uid://dpli5bjhyo7mg" path="res://menu/btn_pressed1.tres" id="6_v05tl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ndtr"]
content_margin_left = 6.0
content_margin_top = 5.0
content_margin_right = 6.0
content_margin_bottom = 5.0
bg_color = Color(0.184314, 0.227451, 0.309804, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.12549, 0.12549, 0.12549, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_ymh58"]
line_spacing = 13.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uddo3"]
bg_color = Color(0, 0, 0, 0.270588)

[sub_resource type="LabelSettings" id="LabelSettings_8y472"]
font_size = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jmvuw"]
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.117647)

[sub_resource type="LabelSettings" id="LabelSettings_1nr3g"]
font_size = 18
font_color = Color(0.643137, 0.643137, 0.643137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jsboj"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0, 0, 0, 0.176471)

[sub_resource type="LabelSettings" id="LabelSettings_c8qsd"]
line_spacing = 1.775
font_size = 2

[sub_resource type="LabelSettings" id="LabelSettings_whfma"]
font_size = 30
font_color = Color(1, 1, 1, 0.235294)

[sub_resource type="Theme" id="Theme_hsk8g"]
default_font_size = 15

[node name="RAM_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fm8fe")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -13.0
offset_top = -7.0
offset_right = 334.0
offset_bottom = 192.0
color = Color(0, 0, 0, 0.34902)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = 296.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = SubResource("StyleBoxFlat_0ndtr")
label_settings = ExtResource("3_w6lip")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 9.0
offset_right = 312.0
offset_bottom = 26.0
text = "RAM infopaneel"
label_settings = SubResource("LabelSettings_ymh58")
horizontal_alignment = 1

[node name="Fail_Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 34.0
offset_right = 98.0
offset_bottom = 152.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uddo3")

[node name="failid_label" type="Label" parent="Fail_Panel"]
layout_mode = 0
offset_right = 156.0
offset_bottom = 23.0
scale = Vector2(0.5, 0.5)
text = "Failid"
horizontal_alignment = 1

[node name="failid_label2" type="Label" parent="Fail_Panel"]
layout_mode = 0
offset_top = 9.0
offset_right = 156.0
offset_bottom = 29.0
scale = Vector2(0.5, 0.5)
text = "Kõik failid, mis on RAM-i toodud."
label_settings = SubResource("LabelSettings_8y472")
horizontal_alignment = 1

[node name="new_task_btn" type="Button" parent="Fail_Panel"]
visible = false
layout_mode = 0
offset_left = 67.0
offset_top = 2.0
offset_right = 114.0
offset_bottom = 49.0
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/font_size = 28
text = "+"

[node name="ScrollContainer" type="ScrollContainer" parent="Fail_Panel"]
layout_mode = 2
offset_left = 2.0
offset_top = 11.0
offset_right = 437.0
offset_bottom = 628.0
scale = Vector2(0.17, 0.17)
mouse_force_pass_scroll_events = false
horizontal_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Fail_Panel/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="palceholder" type="Label" parent="Fail_Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "                                                       "

[node name="empty_label" type="Label" parent="Fail_Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_jmvuw")
text = "Siin pole veel midagi."
label_settings = SubResource("LabelSettings_1nr3g")
horizontal_alignment = 1

[node name="file_block" parent="Fail_Panel/ScrollContainer/VBoxContainer" instance=ExtResource("4_7io3y")]
visible = false
layout_mode = 2

[node name="Select_Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 103.0
offset_top = 34.0
offset_right = 228.0
offset_bottom = 152.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uddo3")

[node name="selected_label" type="Label" parent="Select_Panel"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 23.0
scale = Vector2(0.5, 0.5)
text = "____________"
horizontal_alignment = 1

[node name="Info_Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 233.0
offset_top = 34.0
offset_right = 300.0
offset_bottom = 152.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uddo3")

[node name="VBoxContainer" type="VBoxContainer" parent="Info_Panel"]
layout_mode = 0
offset_top = 13.0
offset_right = 67.0
offset_bottom = 118.0

[node name="Label" type="Label" parent="Info_Panel"]
layout_mode = 0
offset_right = 134.0
offset_bottom = 23.0
scale = Vector2(0.5, 0.5)
text = "Info"
horizontal_alignment = 1

[node name="take_info_btn" type="Button" parent="Info_Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 104.0
offset_right = 129.0
offset_bottom = 144.0
scale = Vector2(0.3, 0.3)
text = "Võta info"

[node name="file_content" type="Label" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 91.0
offset_right = 225.0
offset_bottom = 150.0
theme_override_styles/normal = SubResource("StyleBoxFlat_jsboj")
label_settings = SubResource("LabelSettings_c8qsd")
autowrap_mode = 1
clip_text = true

[node name="dotdotdot" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 108.0
offset_top = 139.0
offset_right = 135.0
offset_bottom = 181.0
scale = Vector2(0.3, 0.3)
text = "..."
label_settings = SubResource("LabelSettings_whfma")

[node name="File_icon" type="Sprite2D" parent="."]
position = Vector2(165, 68)

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 137.0
offset_top = -82.0
offset_right = 167.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
focus_mode = 0
theme = SubResource("Theme_hsk8g")
theme_override_colors/font_color = Color(1, 0.301961, 0.235294, 1)
theme_override_fonts/font = ExtResource("5_8qw4e")
theme_override_styles/normal = ExtResource("6_f3gru")
theme_override_styles/hover = ExtResource("6_v05tl")
theme_override_styles/pressed = ExtResource("2_8qwkf")
text = "×"

[connection signal="pressed" from="Fail_Panel/new_task_btn" to="." method="_on_new_task_btn_pressed"]
[connection signal="pressed" from="Info_Panel/take_info_btn" to="." method="_on_take_info_btn_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
